# ChessBoardGame

./: CMakeLists.txt
include/: BishopPiece.h  ChessBoard.h  GamePiece.h  KingPiece.h  common.h
src/: BishopPiece.cpp  ChessBoard.cpp  KingPiece.cpp  main.cpp
